--- a/style.css
+++ b/style.css
@@ -12,6 +12,36 @@ body{
 h1{
     text-align: center;
 }
+
+button{
+    margin-top: 20px;
+}
+
+button:hover{
+    cursor: pointer;
+}
+
+.khodam{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    box-sizing: border-box;
+}
+
+.khodam p{
+    margin: 10px;
+}
+
+
+#rare{
+    color: red;
+    font-size: 20px;
+    position: absolute;
+    right: 10px;
+    top: 10px;
+}
+
+
 .box {
     width: 350px;
     margin: 100px auto;
@@ -21,6 +51,7 @@ h1{
     padding: 20px;
     align-items: center;
     display: flex;
+    position: relative;
 }
 
 button{
